--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.3.0.M1</version>
+                <configuration>
+                    <webAppConfig>
+                        <defaultsDescriptor>src/test/resources/webdefault.xml</defaultsDescriptor>
+                    </webAppConfig>
+                </configuration>
             </plugin>
         </plugins>
     </build>
